--- a/2002895_Johannes Alexander Putra_Metode Bagi Dua.ipynb
+++ b/2002895_Johannes Alexander Putra_Metode Bagi Dua.ipynb
@@ -379,6 +379,75 @@
         "print(\"Maka akar yang ditemukan \" ,my_bisection(f,a,b,epsilon,0))\n",
         "#memang tidak akan menemukan jawaban karena dimanapun diletakan tandanya akan tetap sama\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "No 1 dan 2. Dengan Metode Newton"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "iterasi 4\n",
+            "estimate = -1.6180339891173305\n"
+          ]
+        }
+      ],
+      "source": [
+        "import numpy as np #panggil library\n",
+        "def my_newton(f, df, x0, galat,iterasi):\n",
+        "#df turunan fungsi f\n",
+        "#x0 adalah starting point\n",
+        "  iterasi += 1\n",
+        "  if iterasi == 4: #asumsi berhenti di iterasi ke-4\n",
+        "    print('iterasi',iterasi)\n",
+        "    return x0\n",
+        "  else:\n",
+        "    return my_newton(f, df, x0 - f(x0)/df(x0), galat,iterasi)\n",
+        "f = lambda x: x**3 - 2*x + 1\n",
+        "f_prime = lambda x: (3*x**2)-2\n",
+        "estimate = my_newton(f, f_prime, -1.7, 1e-5,0) #0 menunjukan iterasi ke-0\n",
+        "print(\"estimate =\", estimate)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "estimate = 1.340217858946818\n"
+          ]
+        }
+      ],
+      "source": [
+        "import numpy as np #panggil library\n",
+        "from math import e\n",
+        "def my_newton(f, df, x0, galat,iterasi):\n",
+        "  iterasi +=1 #incremental\n",
+        "#df turunan fungsi f\n",
+        "#x0 adalah starting point\n",
+        "  if iterasi == 4: #jika berhenti diiterasi ke-4\n",
+        "    return x0\n",
+        "  else:\n",
+        "    return my_newton(f, df, x0 - f(x0)/df(x0), galat,iterasi)\n",
+        "f = lambda x: e**x - x\n",
+        "f_prime = lambda x: e **x - 1\n",
+        "#tidak akan bisa ketemu karena turunan fungsi e^x tetap e^x\n",
+        "estimate = my_newton(f, f_prime, -1.7, 1e-5,0)\n",
+        "print(\"estimate =\", estimate)"
+      ]
     }
   ],
   "metadata": {
