--- a/2002895_Johannes Alexander Putra_Metode Bagi Dua.ipynb
+++ b/2002895_Johannes Alexander Putra_Metode Bagi Dua.ipynb
@@ -260,7 +260,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "Jawaban no 1. "
+        "Jawaban no 1.  Diasumsikan Iterasi dimulai dari Iterasi Ke-1 "
       ]
     },
     {
@@ -323,6 +323,8 @@
         "#batas\n",
         "a = -2\n",
         "b = 3\n",
+        "#epsilon misalkan\n",
+        "e = 0.00001\n",
         "print(\"Maka akar yang ditemukan \" ,my_bisection(f,a,b,e,0))"
       ]
     },
@@ -384,6 +386,70 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "Jawaban no 1.  Diasumsikan Iterasi dimulai dari Iterasi Ke-0 (keterangan : Saya agak ragu Bu, karena ada dari sumber lain menulis iterasi dimulai dari 0)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import numpy as np #panggil library\n",
+        "def my_bisection(f, a, b, e,iterasi): #fungsi bisection\n",
+        "  if np.sign(f(a)) == np.sign(f(b)): #cek tanda jika sama tidak ada akar pada interval\n",
+        "    raise Exception('Tidak ada akar pada interval a dan b')\n",
+        "  m = (a + b)/2\n",
+        "  if iterasi == 16: #diasumsikan berhenti pada iterasi 16\n",
+        "    print(\"a = \", a)\n",
+        "    print(\"b = \", b)\n",
+        "    print(\"Galat\", abs(f(m)))\n",
+        "    return m\n",
+        "  elif np.sign(f(a)) == np.sign(f(m)):\n",
+        "    iterasi +=1\n",
+        "    return my_bisection(f, m, b, e, iterasi)\n",
+        "  elif np.sign(f(b)) == np.sign(f(m)):\n",
+        "    iterasi +=1\n",
+        "    return my_bisection(f, a, m, e,iterasi)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "jawaban no 2. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'e' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_26596\\1474762523.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m-\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Maka akar yang ditemukan \"\u001b[0m \u001b[1;33m,\u001b[0m\u001b[0mmy_bisection\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0me\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[1;31mNameError\u001b[0m: name 'e' is not defined"
+          ]
+        }
+      ],
+      "source": [
+        "#fungsi lambda\n",
+        "f = lambda x : x**3 - 2 * x + 1\n",
+        "#batas\n",
+        "a = -2\n",
+        "b = 3\n",
+        "print(\"Maka akar yang ditemukan \" ,my_bisection(f,a,b,e,0))"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "No 1 dan 2. Dengan Metode Newton"
       ]
     },
@@ -428,6 +494,14 @@
           "output_type": "stream",
           "text": [
             "estimate = 1.340217858946818\n"
+          ]
+        },
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
           ]
         }
       ],
